# discord_gpt

./: bot.py  example.env  pyproject.toml  settings.py
discord_gpt/: chat_completion.py  client.py
