[tool.poetry]
name = "discordgpt"
version = "0.0.1"
description = ""
authors = ["Denis Bolovin <bolovindenis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}
discord-py = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
